# tech-news-agent

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  README.md  tech-news-agent.md
src/: agent.rs  config.rs  main.rs  models.rs  policy.rs  scheduler.rs  stock.rs  summarizer.rs  zhipu.rs
src/pusher/: mod.rs  serverchan.rs  wecom_bot.rs  wxpusher.rs
src/sources/: arxiv.rs  dev_to.rs  github.rs  hackernews.rs  mod.rs  rust_blog.rs  security_advisory.rs
